--- a/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
+++ b/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
@@ -4,6 +4,24 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+	  <AssemblyVersion>0.0.0.1</AssemblyVersion>
+	  <FileVersion>0.0.0.1</FileVersion>
+	  <Version>0.0.0.1</Version>
+	  <PackageReleaseNotes>string</PackageReleaseNotes>
   </PropertyGroup>
+
+	<ItemGroup>
+		<None Include="..\README.md">
+			<Pack>true</Pack>
+			<PackagePath></PackagePath>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Include="..\LICENSE.txt">
+			<Pack>true</Pack>
+			<PackagePath></PackagePath>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
