--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -27,7 +27,7 @@ env:
       )
     }}
 jobs:
-  build-ubuntu:
+  build-ubuntu-latest:
     runs-on: ubuntu-latest
     steps:
     - name: Check out
