--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -38,31 +38,23 @@ jobs:
 
         git config user.email "action@github.com"
     - name: Extract Version
-      run: >-
-        $version_number = ((Select-Xml -Path GithubActionExpressionTesting/GithubActionExpressionTesting.csproj -XPath "//Version").Node.InnerXML)
+      shell: pwsh
+      run: |-
+        $version_number = ((Select-Xml -Path BuildTestApp/BuildTestApp.csproj -XPath "//Version").Node.InnerXML)
+        "version_number=$version_number" >> $env:GITHUB_ENV
 
-        echo "$version_number"
-
-        echo 'version_number<<EOF' >> $GITHUB_ENV
-
-        echo -e "$version_number" >> $GITHUB_ENV
-
-        echo 'EOF' >> $GITHUB_ENV
-
-        "version_number<<EOF" >> $env:GITHUB_ENV
-        "$version_number" >> $env:GITHUB_ENV
-        "EOF" >> $env:GITHUB_ENV
-
-        echo "Version - ${{ env.version_number }}"
     - name: Extract Package Release Notes
-      run: >-
-        $package_release_notes = ((Select-Xml -Path GithubActionExpressionTesting/GithubActionExpressionTesting.csproj -XPath "//PackageReleaseNotes").Node.InnerXML)
+      shell: pwsh
+      run: |-
+        $package_release_notes = ((Select-Xml -Path BuildTestApp/BuildTestApp.csproj -XPath "//PackageReleaseNotes").Node.InnerXML)
 
-        echo "$package_release_notes"
-
+        # Since release notes can have multi line text we need
+        # to do the following to set the environment variable
         "package_release_notes<<EOF" >> $env:GITHUB_ENV
         "$package_release_notes" >> $env:GITHUB_ENV
         "EOF" >> $env:GITHUB_ENV
 
-        echo "PackageReleaseNotes - ${{ env.package_release_notes }}"
-
+    - name: Echo Variables
+      run: |-
+        echo "Found next version_number: '${{ env.version_number }}'"
+        echo "Found next package_release_notes: ${{ env.package_release_notes }}"
