--- a/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
+++ b/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
@@ -8,7 +8,13 @@
 		<AssemblyVersion>0.0.0.1</AssemblyVersion>
 		<FileVersion>0.0.0.1</FileVersion>
 		<Version>0.0.0.1</Version>
-		<PackageReleaseNotes>Initial release</PackageReleaseNotes>
+		<PackageReleaseNotes>
+			RELEASE NOTES
+			
+			Some notes
+			
+			Some more notes
+		</PackageReleaseNotes>
 	</PropertyGroup>
 
 	<ItemGroup>
