--- a/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
+++ b/GithubActionExpressionTesting/GithubActionExpressionTesting.csproj
@@ -9,11 +9,62 @@
 		<FileVersion>0.0.0.1</FileVersion>
 		<Version>0.0.0.1</Version>
 		<PackageReleaseNotes>
-			RELEASE NOTES
-			
-			Some notes
-			
-			Some more notes
+			#Adding Support For Generic Job Definitions
+
+			## BREAKING CHANGE
+			We are excited to announce a significant update to how we define jobs for GitHub Actions using ADotNet! 
+			Starting from this release, we have introduced a breaking change that allows the usage of generic job
+			definitions, replacing the previous job names specifically used for build, tagging, and release.
+			This change requires a small code modification in how you define jobs. You will now have the
+			flexibility to define jobs based on your specific needs, enhancing customization and providing
+			a more streamlined workflow.
+
+			### Before
+			```csharp
+			Jobs = new Jobs
+			{
+				Build = new BuildJob
+				{
+					. . .
+				},
+				AddTag = new TagJob
+				{
+					. . .
+				},
+				Publish = new PublishJob
+				{
+					. . .
+				},
+			}
+			```
+
+			### Now
+			```csharp
+			Jobs = new Jobs
+			{
+				{
+					"build",
+					new Job
+					{
+						. . .
+					}
+				},
+				{
+					"add_tag",
+					new Job
+					{
+						. . .
+					}
+				},
+				{
+					"publish",
+					new Job
+					{
+						. . .
+					}
+				},
+			}
+			```
 		</PackageReleaseNotes>
 	</PropertyGroup>
 
