--- a/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
+++ b/GithubActionExpressionTesting.Infrastructure.Build/GithubActionExpressionTesting.Infrastructure.Build.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="ADotNet" Version="3.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
 		<PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
