--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,7 @@ jobs:
         'EOF' >> $env:GITHUB_ENV
       shell: pwsh
     - name: Display Version Found
-      run: 'echo "version_number: ${{ env.version_number}}"'
+      run: 'echo "version_number: ${{{ env.version_number}}}"'
     - name: Extract Package Release Notes
       run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
@@ -55,7 +55,7 @@ jobs:
         'EOF' >> $env:GITHUB_ENV
       shell: pwsh
     - name: Display Package Release Notes
-      run: 'echo "package_release_notes: ${{ env.package_release_notes}}"'
+      run: 'echo "package_release_notes: ${{{ env.package_release_notes}}}"'
     - name: Setup .Net
       uses: actions/setup-dotnet@v3
       with:
