--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -43,7 +43,7 @@ jobs:
         'EOF' >> $env:GITHUB_ENV
       shell: pwsh
     - name: Display Version Found
-      run: "echo 'version_number: ${{ env.version_number}}'"
+      run: 'echo version_number: ${{ env.version_number}}'
     - name: Extract Package Release Notes
       run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
