--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Check out
       uses: actions/checkout@v3
     - name: Extract Version
-      run: >
+      run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
         'version_number<<EOF' >> $env:GITHUB_ENV
@@ -41,11 +41,13 @@ jobs:
         '$version_number' >> $env:GITHUB_ENV
 
         'EOF' >> $env:GITHUB_ENV
+
+        echo "Found version_number: '$version_number'"
       shell: pwsh
     - name: Display Version Found
       run: 'echo version_number: ${{ env.version_number}}'
     - name: Extract Package Release Notes
-      run: >
+      run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
         'package_release_notes<<EOF' >> $env:GITHUB_ENV
@@ -53,6 +55,8 @@ jobs:
         '$package_release_notes' >> $env:GITHUB_ENV
 
         'EOF' >> $env:GITHUB_ENV
+
+        echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
     - name: Display Package Release Notes
       run: "echo 'package_release_notes: ${{ env.package_release_notes}}'"
@@ -91,7 +95,7 @@ jobs:
 
         git config user.email "action@github.com"
     - name: Extract Version
-      run: >
+      run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
         'version_number<<EOF' >> $env:GITHUB_ENV
@@ -99,11 +103,13 @@ jobs:
         '$version_number' >> $env:GITHUB_ENV
 
         'EOF' >> $env:GITHUB_ENV
+
+        echo "Found version_number: '$version_number'"
       shell: pwsh
     - name: Display Version Found
       run: 'echo "version_number: ${{ env.version_number}}"'
     - name: Extract Package Release Notes
-      run: >
+      run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
         'package_release_notes<<EOF' >> $env:GITHUB_ENV
@@ -111,6 +117,8 @@ jobs:
         '$package_release_notes' >> $env:GITHUB_ENV
 
         'EOF' >> $env:GITHUB_ENV
+
+        echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "package_release_notes: ${{ env.package_release_notes}}"'
