--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -98,32 +98,30 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        'version_number<<EOF' >> $env:GITHUB_ENV
+        "version_number<<EOF" >> $env:GITHUB_ENV
 
-        '$version_number' >> $env:GITHUB_ENV
+        "$version_number" >> $env:GITHUB_ENV
 
-        'EOF' >> $env:GITHUB_ENV
+        "EOF" >> $env:GITHUB_ENV
 
         echo "Found version_number: '$version_number'"
       shell: pwsh
     - name: Display Version Found
-      run: >-
-        echo "version_number: ${{ env.version_number}}"
+      run: 'echo "version_number: ${{ env.version_number}}"'
     - name: Extract Package Release Notes
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        'package_release_notes<<EOF' >> $env:GITHUB_ENV
+        "package_release_notes<<EOF" >> $env:GITHUB_ENV
 
-        '$package_release_notes' >> $env:GITHUB_ENV
+        "$package_release_notes" >> $env:GITHUB_ENV
 
-        'EOF' >> $env:GITHUB_ENV
+        "EOF" >> $env:GITHUB_ENV
 
         echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
     - name: Display Package Release Notes
-      run: >-
-        echo "package_release_notes: ${{ env.package_release_notes}}"
+      run: 'echo "package_release_notes: ${{ env.package_release_notes}}"'
     - name: Create GitHub Tag
       run: >-
         git tag -a "v${{ env.version_number }}" -m "Release - v${{ env.version_number }}"
