--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,11 +36,11 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        'version_number<<EOF' >> $env:GITHUB_ENV
+        echo 'version_number<<EOF' >> $env:GITHUB_ENV
 
-        '$version_number' >> $env:GITHUB_ENV
+        echo '$version_number' >> $env:GITHUB_ENV
 
-        'EOF' >> $env:GITHUB_ENV
+        echo 'EOF' >> $env:GITHUB_ENV
 
         echo "Found version_number: '$version_number'"
       shell: pwsh
@@ -50,11 +50,11 @@ jobs:
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        'package_release_notes<<EOF' >> $env:GITHUB_ENV
+        echo 'package_release_notes<<EOF' >> $env:GITHUB_ENV
 
-        '$package_release_notes' >> $env:GITHUB_ENV
+        echo '$package_release_notes' >> $env:GITHUB_ENV
 
-        'EOF' >> $env:GITHUB_ENV
+        echo 'EOF' >> $env:GITHUB_ENV
 
         echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
@@ -98,11 +98,11 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        "version_number<<EOF" >> $env:GITHUB_ENV
+        echo 'version_number<<EOF' >> $env:GITHUB_ENV
 
-        "$version_number" >> $env:GITHUB_ENV
+        echo '$version_number' >> $env:GITHUB_ENV
 
-        "EOF" >> $env:GITHUB_ENV
+        echo 'EOF' >> $env:GITHUB_ENV
 
         echo "Found version_number: '$version_number'"
       shell: pwsh
@@ -112,11 +112,11 @@ jobs:
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        "package_release_notes<<EOF" >> $env:GITHUB_ENV
+        echo 'package_release_notes<<EOF' >> $env:GITHUB_ENV
 
-        "$package_release_notes" >> $env:GITHUB_ENV
+        echo '$package_release_notes' >> $env:GITHUB_ENV
 
-        "EOF" >> $env:GITHUB_ENV
+        echo 'EOF' >> $env:GITHUB_ENV
 
         echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
