--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Check out
       uses: actions/checkout@v3
     - name: Extract Version
-      run: |-
+      run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
         'version_number<<EOF' >> $env:GITHUB_ENV
@@ -42,9 +42,10 @@ jobs:
 
         'EOF' >> $env:GITHUB_ENV
 
-        echo 'Found version_number: $version_number'
+        echo "Found version_number: '$version_number'"
       shell: pwsh
-
+    - name: Display Version Found
+      run: 'echo "version_number: ${{ env.version_number }}"'
     - name: Extract Package Release Notes
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
@@ -55,22 +56,10 @@ jobs:
 
         'EOF' >> $env:GITHUB_ENV
 
-        echo 'Found package_release_notes: $package_release_notes'
+        echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
-
-
-    - name: Echo Variables
-      run: |-
-        echo "Found next version_number: '${{ env.version_number }}'"
-        echo "Found next package_release_notes: ${{ env.package_release_notes }}"
-
     - name: Display Package Release Notes
       run: 'echo "package_release_notes: ${{ env.package_release_notes }}"'
-
-    - name: Display Version Found
-      run: 'echo "version_number: ${{ env.version_number }}"'
-
-
     - name: Setup .Net
       uses: actions/setup-dotnet@v3
       with:
@@ -109,30 +98,35 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        echo 'version_number<<EOF' >> $env:GITHUB_ENV
+        'echo "Found version_number: $version_number"'
 
-        echo '$version_number' >> $env:GITHUB_ENV
+        'version_number<<EOF' >> $env:GITHUB_ENV
 
-        echo 'EOF' >> $env:GITHUB_ENV
+        '$version_number' >> $env:GITHUB_ENV
 
-        echo "Found version_number: '$version_number'"
+        'EOF' >> $env:GITHUB_ENV
+
       shell: pwsh
-    - name: Display Version Found
-      run: 'echo "version_number: ${{ env.version_number}}"'
+
     - name: Extract Package Release Notes
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        echo 'package_release_notes<<EOF' >> $env:GITHUB_ENV
+        'echo "Found package_release_notes: $package_release_notes"'
 
-        echo '$package_release_notes' >> $env:GITHUB_ENV
+        'package_release_notes<<EOF' >> $env:GITHUB_ENV
 
-        echo 'EOF' >> $env:GITHUB_ENV
+        '$package_release_notes' >> $env:GITHUB_ENV
 
-        echo "Found package_release_notes: '$package_release_notes'"
+        'EOF' >> $env:GITHUB_ENV
+
       shell: pwsh
-    - name: Display Package Release Notes
-      run: 'echo "package_release_notes: ${{ env.package_release_notes}}"'
+
+    - name: Echo Variables
+      run: >-
+        echo "Found next version_number: ${{ env.version_number }}"
+        echo "Found next package_release_notes: ${{ env.package_release_notes }}"
+
     - name: Create GitHub Tag
       run: >-
         git tag -a "v${{ env.version_number }}" -m "Release - v${{ env.version_number }}"
