--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,9 +58,9 @@ jobs:
       shell: pwsh
     - name: Echo Variables
       run: >-
-        echo "version_number: ${ env.version_number }"
+        echo "version_number: ${{ env.version_number }}"
 
-        echo "package_release_notes: ${ env.package_release_notes }"
+        echo "package_release_notes: ${{ env.package_release_notes }}"
     - name: Setup .Net
       uses: actions/setup-dotnet@v3
       with:
