Echo environment variables

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,9 +42,8 @@ jobs:
 
         'EOF' >> $env:GITHUB_ENV
 
-        echo "Found version_number: $version_number"
+        echo "Found version_number: '$version_number'"
       shell: pwsh
-
     - name: Extract Package Release Notes
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
@@ -55,9 +54,8 @@ jobs:
 
         'EOF' >> $env:GITHUB_ENV
 
-        echo "Found version_number: $package_release_notes"
+        echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
-
     - name: Echo Variables
       run: >-
         echo "version_number: ${{ env.version_number }}"
@@ -109,8 +107,6 @@ jobs:
 
         echo "Found version_number: '$version_number'"
       shell: pwsh
-    - name: Display Version Found
-      run: 'echo "version_number: ${{ env.version_number}}"'
     - name: Extract Package Release Notes
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
@@ -123,8 +119,6 @@ jobs:
 
         echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
-    - name: Display Package Release Notes
-      run: 'echo "package_release_notes: ${{ env.package_release_notes}}"'
     - name: Create GitHub Tag
       run: >-
         git tag -a "v${{ env.version_number }}" -m "Release - v${{ env.version_number }}"
