Use powershell when echo environment variables

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,6 +61,7 @@ jobs:
         echo "version_number: ${{ env.version_number }}"
 
         echo "package_release_notes: ${{ env.package_release_notes }}"
+      shell: pwsh
     - name: Setup .Net
       uses: actions/setup-dotnet@v3
       with:
