Use syntax $env:variable_name to display environment variables in powershell

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -58,6 +58,8 @@ jobs:
       shell: pwsh
     - name: Echo Variables
       run: >-
+        echo "version_number: $env:version_number"
+
         echo "version_number: ${{ env.version_number }}"
 
         echo "package_release_notes: ${{ env.package_release_notes }}"
