--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -64,6 +64,10 @@ jobs:
 
         echo "package_release_notes: ${{ env.package_release_notes }}"
       shell: pwsh
+    - name: Echo Variables - Manually created
+      run: |-
+        echo "Found next version_number: '${{ env.version_number }}'"
+        echo "Found next package_release_notes: ${{ env.package_release_notes }}"
     - name: Setup .Net
       uses: actions/setup-dotnet@v3
       with:
