--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -48,11 +48,11 @@ jobs:
       run: |-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        'package_release_notes<<EOF' >> $env:GITHUB_ENV
+        # 'package_release_notes<<EOF' >> $env:GITHUB_ENV
 
-        '$package_release_notes' >> $env:GITHUB_ENV
+        # '$package_release_notes' >> $env:GITHUB_ENV
 
-        'EOF' >> $env:GITHUB_ENV
+        # 'EOF' >> $env:GITHUB_ENV
 
         echo "Found package_release_notes: '$package_release_notes'"
       shell: pwsh
