--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -39,7 +39,7 @@ jobs:
 
         echo "##[set-output name=version_number]$version_number
 
-        echo "Found version_number: '$version_number'"
+        echo "Found version_number: $version_number"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -50,7 +50,7 @@ jobs:
 
         echo "##[set-output name=package_release_notes]$package_release_notes
 
-        echo "Found package_release_notes: '$package_release_notes'"
+        echo "Found package_release_notes: $package_release_notes"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
@@ -95,7 +95,7 @@ jobs:
 
         echo "##[set-output name=version_number]$version_number
 
-        echo "Found version_number: '$version_number'"
+        echo "Found version_number: $version_number"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -106,7 +106,7 @@ jobs:
 
         echo "##[set-output name=package_release_notes]$package_release_notes
 
-        echo "Found package_release_notes: '$package_release_notes'"
+        echo "Found package_release_notes: $package_release_notes"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
