--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,23 +34,19 @@ jobs:
       uses: actions/checkout@v3
     - name: Extract Version
       id: extract_version
-      run: >-
+      run: >
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
         echo "##[set-output name=version_number]$version_number
-
-        echo "Found version_number: $version_number"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
     - name: Extract Package Release Notes
       id: extract_package_release_notes
-      run: >-
+      run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
         echo "##[set-output name=package_release_notes]$package_release_notes
-
-        echo "Found package_release_notes: $package_release_notes"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
@@ -90,23 +86,19 @@ jobs:
         git config user.email "action@github.com"
     - name: Extract Version
       id: extract_version
-      run: >-
+      run: >
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
         echo "##[set-output name=version_number]$version_number
-
-        echo "Found version_number: $version_number"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
     - name: Extract Package Release Notes
       id: extract_package_release_notes
-      run: >-
+      run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
         echo "##[set-output name=package_release_notes]$package_release_notes
-
-        echo "Found package_release_notes: $package_release_notes"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
