--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,7 @@ jobs:
       run: >
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        echo "##[set-output name=version_number]$version_number
+        echo "version_number=$version_number" >> $GITHUB_OUTPUT
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -46,7 +46,7 @@ jobs:
       run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        echo "##[set-output name=package_release_notes]$package_release_notes
+        echo "package_release_notes=$package_release_notes" >> $GITHUB_OUTPUT
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
@@ -89,7 +89,7 @@ jobs:
       run: >
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        echo "##[set-output name=version_number]$version_number
+        echo "version_number=$version_number" >> $GITHUB_OUTPUT
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -98,7 +98,7 @@ jobs:
       run: >
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        echo "##[set-output name=package_release_notes]$package_release_notes
+        echo "package_release_notes=$package_release_notes" >> $GITHUB_OUTPUT
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
