--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,9 +37,11 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        $version_number = $version_number.Replace('"', '\"')
+        Write-Host "Version number: $version_number"$version_number = $version_number.Replace('"', '\"')
 
-        $version_number | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+        $version_number | Out-File -FilePath $env:GITHUB_OUTPUT -Append 
+
+        Write-Host "File path: $env:GITHUB_OUTPUT"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -48,9 +50,11 @@ jobs:
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        $package_release_notes = $package_release_notes.Replace('"', '\"')
+        Write-Host "Version number: $package_release_notes"$package_release_notes = $package_release_notes.Replace('"', '\"')
 
-        $package_release_notes | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+        $package_release_notes | Out-File -FilePath $env:GITHUB_OUTPUT -Append 
+
+        Write-Host "File path: $env:GITHUB_OUTPUT"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
@@ -93,9 +97,11 @@ jobs:
       run: >-
         $version_number=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//Version').Node.InnerXML)
 
-        $version_number = $version_number.Replace('"', '\"')
+        Write-Host "Version number: $version_number"$version_number = $version_number.Replace('"', '\"')
 
-        $version_number | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+        $version_number | Out-File -FilePath $env:GITHUB_OUTPUT -Append 
+
+        Write-Host "File path: $env:GITHUB_OUTPUT"
       shell: pwsh
     - name: Display Version
       run: 'echo "Version number: ${{ steps.extract_version.outputs.version_number }}"'
@@ -104,9 +110,11 @@ jobs:
       run: >-
         $package_release_notes=((Select-Xml -Path 'GithubActionExpressionTesting/GithubActionExpressionTesting.csproj' -XPath '//PackageReleaseNotes').Node.InnerXML)
 
-        $package_release_notes = $package_release_notes.Replace('"', '\"')
+        Write-Host "Version number: $package_release_notes"$package_release_notes = $package_release_notes.Replace('"', '\"')
 
-        $package_release_notes | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+        $package_release_notes | Out-File -FilePath $env:GITHUB_OUTPUT -Append 
+
+        Write-Host "File path: $env:GITHUB_OUTPUT"
       shell: pwsh
     - name: Display Package Release Notes
       run: 'echo "Package Release Notes: ${{ steps.extract_package_release_notes.outputs.package_release_notes }}"'
